--- a/input.css
+++ b/input.css
@@ -9,7 +9,11 @@
 }
 
 .section-container {
-  @apply max-w-3xl mx-auto text-center;
+  @apply max-w-3xl mx-auto text-center px-10;
+}
+
+.section-p {
+  @apply max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue;
 }
 
 .button-container {
@@ -18,6 +22,14 @@
 
 .button-shape {
   @apply p-4 px-8 rounded-full shadow-lg duration-200 hover:opacity-80;
+}
+
+.items-h5 {
+  @apply mb-2 text-2xl font-bold text-darkGrayishBlue;
+}
+
+.items-p {
+  @apply max-w-md text-grayishBlue;
 }
 
 body {
