:sparkles: Created supercharge section

--- a/input.css
+++ b/input.css
@@ -6,6 +6,10 @@
   h3 {
     @apply mb-8 text-4xl font-bold text-darkGrayishBlue md:text-5xl;
   }
+
+  h5 {
+    @apply mb-2 text-2xl font-bold text-darkGrayishBlue;
+  }
 }
 
 .section-container {
@@ -13,7 +17,7 @@
 }
 
 .section-p {
-  @apply max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue;
+  @apply max-w-3xl mx-auto text-xl leading-9 text-center text-grayishBlue;
 }
 
 .button-container {
@@ -22,10 +26,6 @@
 
 .button-shape {
   @apply p-4 px-8 rounded-full shadow-lg duration-200 hover:opacity-80;
-}
-
-.items-h5 {
-  @apply mb-2 text-2xl font-bold text-darkGrayishBlue;
 }
 
 .items-p {
